WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
190256
[Cocoa] REGRESSION: web content process paused in debugger is considered to be unresponsive if WebKit client is sandboxed
https://bugs.webkit.org/show_bug.cgi?id=190256
Summary
[Cocoa] REGRESSION: web content process paused in debugger is considered to b...
Blaze Burg
Reported
2018-10-03 11:49:25 PDT
We can do a better job.
Attachments
Patch
(2.21 KB, patch)
2018-10-03 12:04 PDT
,
Blaze Burg
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Blaze Burg
Comment 1
2018-10-03 11:49:41 PDT
<
rdar://problem/44957921
>
Blaze Burg
Comment 2
2018-10-03 12:04:52 PDT
Created
attachment 351540
[details]
Patch
WebKit Commit Bot
Comment 3
2018-10-03 14:02:28 PDT
Comment on
attachment 351540
[details]
Patch Clearing flags on attachment: 351540 Committed
r236810
: <
https://trac.webkit.org/changeset/236810
>
WebKit Commit Bot
Comment 4
2018-10-03 14:02:29 PDT
All reviewed patches have been landed. Closing bug.
Darin Adler
Comment 5
2018-10-07 19:59:55 PDT
Comment on
attachment 351540
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=351540&action=review
> Source/WebKit/UIProcess/Cocoa/WebProcessProxyCocoa.mm:140 > + // If the UI process is sandboxed and lacks 'process-info-pidinfo', it cannot find out whether other processes are being debugged. > + if (currentProcessIsSandboxed() && !!sandbox_check(getpid(), "process-info-pidinfo", SANDBOX_CHECK_NO_REPORT))
Why do we need the "currentProcessIsSandboxed()" check? Wouldn’t the second call to sandbox_check do the right thing on its own? Separate smaller comment: It doesn’t seem helpful to include the !! in this boolean expression.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug